tests/compiletests/ui/spirv-attr/invalid-matrix-type-empty.stderr
error: `#[spirv(matrix)]` member types must all be the same
 --> $DIR/invalid-matrix-type-empty.rs:7:1
  |
7 | pub struct EmptyStruct {}
  | ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

